# ntex-star

./: .env  Cargo.toml  README.md  rustfmt.toml  test.html
src/: errors.rs  main.rs
src/article/: delete.rs  edit.rs  mod.rs  new.rs  search.rs  view.rs
src/middlewars/: auth.rs
src/models/: article.rs  user.rs
src/user/: login.rs
