[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
cookie = "0.17"
# enable cookie support
# cookie = ["coo-kie", "coo-kie/percent-encode"]
dotenvy = "0.15.6"
env_logger = "0.10.0"
ntex = { version = "0.6.0", features = ["cookie", "tokio"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }

# tokio = { version = "1.11.0", features = ["full"] }
# tungstenite = "0.13.0"
# tokio-tungstenite = "0.14.0"
# futures-util = "0.3.0"
